--- a/.github/workflows/generate_requirements.yml
+++ b/.github/workflows/generate_requirements.yml
@@ -12,5 +12,5 @@ jobs:
 
         # Put an example of mandatory inputs here
         with:
-          PROJECT_PATH: project_folder #default is the root of the repository
-          REQUIREMENT_PATH: project_folder/requirements.txt #default is requirement.txt in the root of your repository
+          PROJECT_PATH: stuttgart_veranstaltungen_rss #default is the root of the repository
+          REQUIREMENT_PATH: stuttgart_veranstaltungen_rss/requirements.txt #default is requirement.txt in the root of your repository
