--- a/.gitignore
+++ b/.gitignore
@@ -171,7 +171,6 @@ cython_debug/
 
 # Built Visual Studio Code Extensions
 *.vsix
-.wolf478254iOx56QTBDlkI.py
-.gitignore
+.wolf*
 cspell.json
 rss_feeds.code-workspace
