--- a/.github/workflows/generate_reqs.yml
+++ b/.github/workflows/generate_reqs.yml
@@ -7,3 +7,8 @@ jobs:
       - uses: actions/checkout@master
       - name: Check requirements.txt
         uses: ekvanox/pipreqs-action@master
+
+        with:
+          PROJECT_PATH: .
+          REQUIREMENT_PATH: ./requirements.txt
+          COMMIT_MESSAGE: "update/add requirements.txt"
