--- a/.github/workflows/generate_reqs.yml
+++ b/.github/workflows/generate_reqs.yml
@@ -9,6 +9,6 @@ jobs:
         uses: ekvanox/pipreqs-action@master
 
         with:
-          PROJECT_PATH: "stuttgart-veranstaltungen-rss"
-          REQUIREMENT_PATH: "stuttgart-veranstaltungen-rss/reqs/requirements.txt"
+          PROJECT_PATH: .
+          REQUIREMENT_PATH: ./reqs/requirements.txt
           COMMIT_MESSAGE: "update/add requirements.txt"
