--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,7 @@
 		"vscode": {
 			"extensions": [
 				"ms-python.black-formatter",
-				// "streetsidesoftware.code-spell-checker",
+				"streetsidesoftware.code-spell-checker",
 				"ms-python.flake8",
 				"streetsidesoftware.code-spell-checker-german",
 				"github.vscode-github-actions",
@@ -39,8 +39,8 @@
 				"VisualStudioExptTeam.vscodeintellicode",
 				"ms-python.isort",
 				"yzhang.markdown-all-in-one",
-				// "shd101wyy.markdown-preview-enhanced",
-				// "christian-kohler.path-intellisense",
+				"shd101wyy.markdown-preview-enhanced",
+				"christian-kohler.path-intellisense",
 				"ms-python.vscode-pylance",
 				"ms-python.pylint",
 				"ms-python.python"
@@ -50,42 +50,48 @@
 				"python.formatting.autopep8Path": "/usr/local/py-utils/bin/autopep8",
 				"python.formatting.blackPath": "/usr/local/py-utils/bin/black",
 				"python.linting.flake8Path": "/usr/local/py-utils/bin/flake8",
-				"python.linting.flake8Enabled": true,
-				"python.linting.mypyPath": "/usr/local/py-utils/bin/mypy",
-				"python.linting.mypyEnabled": false,
-				// "python.linting.pylintPath": "/usr/local/py-utils/bin/pylint",
-				"python.linting.pylintEnabled": true,
+				"python.linting.pylintPath": "/usr/local/py-utils/bin/pylint",
 				"editor.codeActionsOnSave": {
 					"source.organizeImports": true
 				},
+				"python.linting.enabled": true,
+				"python.linting.pylintEnabled": true,
+				"python.linting.flake8Enabled": true,
+				"python.linting.banditEnabled": true,
+				"python.linting.lintOnSave": true,
+				"python.formatting.provider": "black",
 				"editor.formatOnSave": true,
+				"pylint.args": [
+					"--max-line-length=200",
+					"--disable=C0114,C0115",
+					"--preview",
+					"--good-names=e,f,i,j,k,l"
+				],
+				"python.linting.banditArgs": [
+					"-ll",
+					"-s",
+					"B101,B110"
+				],
+				"python.formatting.blackArgs": [
+					"--line-length",
+					"88",
+					"--preview"
+				],
 				"flake8.args": [
-					"--max-line-length=100"
+					"--max-line-length=200",
+					"--ignore=E203,W503",
+					"--show-source"
 				],
 				"isort.args": [
 					"--profile",
 					"black"
 				],
 				"isort.check": true,
-				"python.formatting.blackArgs": [
-					"--line-length",
-					"88",
-					"--preview"
-				],
-				"python.formatting.provider": "black",
-				"python.languageServer": "Pylance",
-				"python.linting.banditEnabled": true,
-				"python.linting.enabled": true,
-				"python.linting.lintOnSave": true,
-				"pylint.path": [
-					"/usr/local/py-utils/bin/pylint"
-				],
-				"pylint.args": [
-					"--good-names=('i','e','f','df','pd','Entity')",
-					"--disable=logging-fstring-interpolation"
-				],
 				"keyboard.layout": "com.apple.keylayout.German",
-				"cSpell.language": "en, de-DE"
+				"cSpell.language": "en, de-DE",
+				"python.analysis.completeFunctionParens": true,
+				"python.analysis.autoImportCompletions": true,
+				"python.analysis.autoFormatStrings": true
 			}
 		}
 	},
