--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,6 +24,9 @@
 		},
 		"ghcr.io/devcontainers-contrib/features/pylint:2": {
 			"version": "latest"
+		},
+		"ghcr.io/devcontainers-contrib/features/neovim-apt-get:1": {
+			"version": "latest"
 		}
 	},
 	"customizations": {
