--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,22 +12,19 @@
 		// 	"userGid": "1001",
 		// 	"upgradePackages": "true"
 		// },
-		"ghcr.io/devcontainers-contrib/features/bandit:2": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers-contrib/features/black:2": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers-contrib/features/flake8:2": {
-			"version": "latest",
-			"plugins": "flake8-black flake8-isort flake8-print flake8-bandit flake8-pylint flake8-builtins flake8-spellcheck flake8-pytest-style"
-		},
-		"ghcr.io/devcontainers-contrib/features/pylint:2": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers-contrib/features/neovim-apt-get:1": {
-			"version": "latest"
-		}
+		// "ghcr.io/devcontainers-contrib/features/bandit:2": {
+		// 	"version": "latest"
+		// },
+		// "ghcr.io/devcontainers-contrib/features/black:2": {
+		// 	"version": "latest"
+		// },
+		// "ghcr.io/devcontainers-contrib/features/flake8:2": {
+		// 	"version": "latest",
+		// 	"plugins": "flake8-black flake8-isort flake8-print flake8-bandit flake8-pylint flake8-builtins flake8-spellcheck flake8-pytest-style"
+		// },
+		// "ghcr.io/devcontainers-contrib/features/pylint:2": {
+		// 	"version": "latest"
+		// }
 	},
 	"customizations": {
 		"vscode": {
@@ -46,28 +43,31 @@
 				"christian-kohler.path-intellisense",
 				"ms-python.vscode-pylance",
 				"ms-python.pylint",
-				"ms-python.python"
+				"ms-python.python",
+				"dbaeumer.vscode-eslint"
 			],
 			"settings": {
 				"python.defaultInterpreterPath": "/usr/local/bin/python",
+				"python.linting.enabled": true,
+				"python.linting.lintOnSave": true,
+				"editor.formatOnSave": true,
+				"python.linting.banditPath": "/usr/local/py-utils/bin/bandit",
 				"python.formatting.autopep8Path": "/usr/local/py-utils/bin/autopep8",
 				"python.formatting.blackPath": "/usr/local/py-utils/bin/black",
 				"python.linting.flake8Path": "/usr/local/py-utils/bin/flake8",
+				"python.linting.flake8Enabled": true,
+				"python.linting.mypyPath": "/usr/local/py-utils/bin/mypy",
+				"python.linting.mypyEnabled": false,
 				"python.linting.pylintPath": "/usr/local/py-utils/bin/pylint",
+				"python.linting.pylintEnabled": true,
+				"python.linting.banditEnabled": true,
 				"editor.codeActionsOnSave": {
 					"source.organizeImports": true
 				},
-				"python.linting.enabled": true,
-				"python.linting.pylintEnabled": true,
-				"python.linting.flake8Enabled": true,
-				"python.linting.banditEnabled": true,
-				"python.linting.lintOnSave": true,
 				"python.formatting.provider": "black",
-				"editor.formatOnSave": true,
 				"pylint.args": [
 					"--max-line-length=200",
-					"--disable=C0114,C0115",
-					"--preview",
+					"--disable=C0114,C0115,W1203",
 					"--good-names=e,f,i,j,k,l"
 				],
 				"python.linting.banditArgs": [
