--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,9 @@ cspell.json
 
 # Ignore dynaconf secret files
 .secrets.*
+
+# Ignore rss files
+*rss
+
+# Ignore my settings file
+mysettings.toml
