--- a/settings.toml
+++ b/settings.toml
@@ -10,13 +10,13 @@ nextcloud_container_name = "nextcloud-aio-nextcloud"
 # name = "buehne_veranstaltungen.rss"
 # title = "Bühne - Stuttgart"
 # category = 79078
-# [[rss_feeds]]
-# name = "philo_veranstaltungen.rss"
-# title = "Literatur, Philosophie und Geschichte - Stuttgart"
-# category = 77317
 [[rss_feeds]]
-name = "musik_veranstaltungen.rss"
-title = "Musik - Stuttgart"
-category = 79091
+name = "philo_veranstaltungen.rss"
+title = "Literatur, Philosophie und Geschichte - Stuttgart"
+category = 77317
+# [[rss_feeds]]
+# name = "musik_veranstaltungen.rss"
+# title = "Musik - Stuttgart"
+# category = 79091
 
 [testing]
