--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,9 +5,14 @@
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:0-3.9",
 	"features": {
-		"ghcr.io/devcontainers/features/sshd:1": {
-			"version": "latest"
+		"features": {
+			"ghcr.io/devcontainers-contrib/features/poetry:2": {
+				"version": "latest"
+			}
 		}
+		// "ghcr.io/devcontainers/features/sshd:1": {
+		// 	"version": "latest"
+		// }
 		// "ghcr.io/devcontainers/features/common-utils:2": {
 		// 	"installZsh": "true",
 		// 	"username": "vscode",
