--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -107,7 +107,7 @@
 	},
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "pip3 install --user -r requirements.txt",
-	"postCreateCommand": "poetry install",
+	"postCreateCommand": "poetry config virtualenvs.create false && poetry install",
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
