--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,7 +48,7 @@
 				"shd101wyy.markdown-preview-enhanced",
 				"christian-kohler.path-intellisense",
 				"ms-python.vscode-pylance",
-				"ms-python.pylint",
+				// "ms-python.pylint",
 				"ms-python.python",
 				"dbaeumer.vscode-eslint",
 				"bungcip.better-toml"
@@ -66,7 +66,7 @@
 				"python.linting.mypyPath": "/usr/local/py-utils/bin/mypy",
 				"python.linting.mypyEnabled": false,
 				"python.linting.pylintPath": "/usr/local/py-utils/bin/pylint",
-				"python.linting.pylintEnabled": true,
+				"python.linting.pylintEnabled": false,
 				"python.linting.banditEnabled": true,
 				"editor.codeActionsOnSave": {
 					"source.organizeImports": true
@@ -106,8 +106,8 @@
 		}
 	},
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "pip3 install --user -r requirements.txt",
-	"postCreateCommand": "poetry config virtualenvs.create false && poetry install",
+	// "postCreateCommand": "pip3 install --user poetry && pip3 install --user -r requirements.txt",
+	"postCreateCommand": "poetry install --no-interaction && poetry shell",
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
