--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,17 @@ requests = "2.31.0"
 markupsafe = "2.0.1"
 
 
+[tool.poetry.scripts]
+rss-downloader = "rss_downloader.__main__:main"
+
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.3.0"
+pytest = "^7.3.2"
+flake8 = "^6.0.0"
+black = "^23.3.0"
+isort = "^5.12.0"
+bandit = "^1.7.5"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
